# sokoban

./: CMakeLists.txt  README.md  sokoban.db
src/: db.c  db.h  game.c  game.h  level.c  level.h  main.c  render.c  render.h  solver.c  solver.h  types.h  ui.c  ui.h
tests/: analyze.py  bench.c  tests_res.csv
